# Netology

./: .gitignore
Lesson_1/: Lesson_1.cpp  Lesson_1.vcxproj  Lesson_1.vcxproj.filters
Lesson_1/x64/Debug/: Lesson_1.exe.recipe  Lesson_1.ilk  Lesson_1.vcxproj.FileListAbsolute.txt  vc143.idb
Lesson_2/Task 1/: Task 1.cpp
Lesson_2/Task 3/: Task 3.cpp  Task 3.sln
Multi threads/L1/Task 1/: CMakeLists.txt  Task 1.cpp  Task 1.sln  Task 1.vcxproj  main.cpp
Multi threads/L1/Task 2/: CMakeLists.txt  main.cpp
Multi threads/L2/Task 1/: Task 1.cpp  Task 1.sln  Task 1.vcxproj
Multi threads/L2/Task 2/: Source.cpp  Task 2.cpp  Task 2.sln  Task 2.vcxproj  main.cpp
Multi threads/L2/Task 3/: Task 3.cpp  Task 3.sln  Task 3.vcxproj
Multi threads/L3/Task 1/: Task 1.cpp  Task 1.sln  Task 1.vcxproj
Multi threads/L3/Task 2/: Task 2.cpp  Task 2.sln  Task 2.vcxproj
Multi threads/L5 Docker/Task 1/: Dockerfile  main.cpp
Multi threads/Refacotring/Task 1/: Task 1.sln  Task 1.vcxproj  Task 1.vcxproj.filters  main.cpp  shape.cpp  shape.h  transform.cpp  transform.h
Qt/L1 Installing/Example/: CMakeLists.txt  main.cpp
Qt/L2_QTModules/: CMakeLists.txt  main.cpp
Qt/L3_qt_designer/: CMakeLists.txt  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/L4_widgets/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/L5_Signals_Slots/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Qt/L6_Concurrent/: mainwindow.cpp
Qt/L7_Graphics/: CMakeLists.txt  dialogwindow.h  graphic.h  graphwindow.cpp  graphwindow.h  graphwindow.ui  mainwindow.cpp  mainwindow.h
Qt/L8_Database/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SQL/L1/: Task 1.drawio
SQL/L2/Task 1/: Diagram.drawio  Запросы.txt
SQL/L2/Task 2/: Task 2.txt  Var_2.drawio
SQL/L4/: CREATE запросы.txt  Задание 2.txt  Задание 3.txt  Задание 4.txt  Заполнение таблиц.txt
SQL/L5/: CMakeLists.txt  main.cpp
SQL/L6 wtdbo/: L6 wtdbo.sln  L6 wtdbo.vcxproj  Source.cpp
advanced programing/L2_RAI/Task 1/: Task 1.cpp  Task 1.sln  Task 1.vcxproj
advanced programing/L2_RAI/Task 2/: Task 2.cpp  Task 2.sln  (+1 more)
advanced programing/L3 UNIT test/Task 1/Test/Test_Clear/: CMakeLists.txt  test_Clear_main.cpp
advanced programing/L3 UNIT test/Task 1/Test/Test_Empty/: CMakeLists.txt  test_Empty_main.cpp
advanced programing/L3 UNIT test/Task 1/Test/Test_Empty/Buld/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Test_Empty.sln  Test_Empty.vcxproj  Test_Empty.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
advanced programing/L3 UNIT test/Task 1/Test/Test_Empty/Buld/Catch2-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Catch2.sln
advanced programing/L3 UNIT test/Task 1/Test/Test_Empty/Buld/Catch2-build/src/: Catch2.vcxproj  Catch2.vcxproj.filters  Catch2WithMain.vcxproj  Catch2WithMain.vcxproj.filters
advanced programing/L3 UNIT test/Task 1/Test/Test_Size/: CMakeLists.txt  test_Size_main.cpp
advanced programing/L3 UNIT test/Task 2/Test/Test_PopBack/: CMakeLists.txt  test_PopBack_main.cpp
advanced programing/L3 UNIT test/Task 2/Test/Test_PopFront/: CMakeLists.txt  test_PopFront_main.cpp
advanced programing/L3 UNIT test/Task 2/Test/Test_PushBack/: CMakeLists.txt  test_PushBack_main.cpp
advanced programing/L3 UNIT test/Task 2/Test/Test_PushFront/: CMakeLists.txt  test_PushFront_main.cpp
advanced programing/Parser_INI_files/: Parser_INI_files.cpp  Parser_INI_files.sln  Parser_INI_files.vcxproj  Parser_INI_files.vcxproj.filters  input.ini  main.cpp
basic programming on C++/Lesson 12/Task 5/Lib/: CMakeLists.txt  Parallelogram.cpp  Ravnobed_trng.cpp  Square.cpp  Triangle.cpp
basic programming on C++/Lesson 12/Task 5/Lib/headers/: Figure.h  Parallelogram.h  Ravnobed_trng.h  Rectangle.h  Right_trng.h  Romb.h  Square.h  Tetragone.h
basic programming on C++/Lesson 12/Task 5/Lib/sources/: Rectangle.cpp  Romb.cpp  Tetragone.cpp
basic programming on C++/Lesson_1/: Lesson_1.sln
basic programming on C++/Racing_Simulator/: CMakeLists.txt  main.cpp
basic programming on C++/Racing_Simulator/Lib/: CMakeLists.txt
basic programming on C++/Racing_Simulator/Lib/Headers/: Air.h  BootsRover.h  Broomstic.h  Camel.h  CamelBoost.h  Centaur.h  Eagle.h  FlyingCapret.h  Ground.h  Racing.h  Transport.h
basic programming on C++/Racing_Simulator/Lib/Source/: Air.cpp  BootsRover.cpp  Broomstic.cpp  Camel.cpp  CamelBoost.cpp  Centaur.cpp  Eagle.cpp  FlyingCapret.cpp  Ground.cpp  Racing.cpp  Transport.cpp
basic programming on C++/lesson 11/Task 2/: CMakeLists.txt  Figure.cpp  Ravnostor_trng.cpp  Right_trng.cpp
basic programming on C++/lesson 11/Task 2/headers/: Ravnobed_trng.h  Right_trng.h  Triangle.h
found of C++/igra_ghizn/: FileName.cpp  Kursach_1.sln  Kursach_1.vcxproj
(+325 files in other folders)
