CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
project(Figure_lib)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
set(sources_figures sources/Figure.cpp sources/Triangle.cpp sources/Tetragone.cpp)
set(source_triangle sources/Right_trng.cpp sources/Ravnobed_trng.cpp sources/Ravnostor_trng.cpp)
set(source_tetragone sources/Parallelogram.cpp sources/Romb.cpp sources/Rectangle.cpp sources/Square.cpp)
add_library(Figure_lib SHARED ${sources_figures} ${source_triangle} ${source_tetragone})